keyvault-demo-full.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
spec:
  selector:
    matchLabels:
      app: $APP_NAME
  template:
    metadata:
      labels:
        app: $APP_NAME
        aadpodidbinding: $POD_BINDING
    spec:
      containers:
      - name: keyvault-demo
        image: $ACR_NAME.azurecr.io/$APP_NAME:latest
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME
  labels:
    name: $APP_NAME
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: $PORT_NUMBER
    targetPort: 80
  selector:
    app: $APP_NAME
