keyvault-demo1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keyvault-demo1
spec:
  selector:
    matchLabels:
      app: keyvault-demo1
  template:
    metadata:
      labels:
        app: keyvault-demo1
        aadpodidbinding: aad-demo-app1
    spec:
      containers:
      - name: keyvault-demo
        image: attk8demoacr.azurecr.io/keyvault-demo1:latest
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: keyvault-demo1
  labels:
    name: keyvault-demo1
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8081
    targetPort: 80
  selector:
    app: keyvault-demo1
