keyvault-demo2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keyvault-demo2
spec:
  selector:
    matchLabels:
      app: keyvault-demo2
  template:
    metadata:
      labels:
        app: keyvault-demo2
        aadpodidbinding: aad-demo-app2
    spec:
      containers:
      - name: keyvault-demo
        image: attk8kvdemoacr.azurecr.io/keyvault-demo2:latest
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: keyvault-demo2
  labels:
    name: keyvault-demo2
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8082
    targetPort: 80
  selector:
    app: keyvault-demo2
